fix overflow problems

--- a/src/app/note/terra-note.component.scss
+++ b/src/app/note/terra-note.component.scss
@@ -44,7 +44,7 @@ $padding-border: 16px;
         {
             padding-right: 0.8rem;
             max-width: 77%;
-            white-space: nowrap;
+            white-space: normal;
             color: $grey-11;
             hr
             {
@@ -53,6 +53,8 @@ $padding-border: 16px;
             div
             {
                 white-space: pre-wrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
         }
         .note-sidebar
